Update testfilefromVSCode.html with additional content
Added a new line to test if changes are tracked in Git from Github.

--- a/testfilefromVSCode.html
+++ b/testfilefromVSCode.html
@@ -7,5 +7,7 @@
     Need to push this to GitHUb as soon as I am done editing
 
     Hope there are no issues with that.
+    Adding another line from Github.com website to see if changes are being tracked to the local repo or not/.
 </body>
 </html>
+
