Edited Contents of Test from VS Code HTML and added GIT coommands

--- a/testfilefromVSCode.html
+++ b/testfilefromVSCode.html
@@ -7,7 +7,37 @@
     Need to push this to GitHUb as soon as I am done editing
 
     Hope there are no issues with that.
-    Adding another line from Github.com website to see if changes are being tracked to the local repo or not/.
+    Adding another line from Github.com website to see if changes are being tracked to the local repo or not.
+
+    Adding another line from Github.com website to see if changes are being tracked to the local repo or not.
+
+    Adding another line from VS Code to see if changes are being tracked to the local repo or not.
+
+    also adding commands here:
+
+    <list>
+        
+1) Made me download GITSCM as it wasn't on my computer
+2) Create a Repo on machine                                                      <li>  mkdir gitVideo </li>
+3) Use command line using MinTTY
+4) Create files to the repo using touch command                                  <li>  touch index.html demo.py or touch <filename> for single </li>
+5) Initialize the repo with GIT                                                  <li>  git init </li>
+6) Add files to git using                                                        <li>  for all files git add. or single file git add <filename>    </li>     
+7) Commit those changes                                                          <li>  git commit -m 'message' </li>
+8) Make changes by deleting and adding new files and re-commiting those changes  <li>  rm index.html | commit -m 'removed html file' </li>
+9) Config work with email and name                                               <li>  git config --global user.email "swapnilamundra1811@gmail.com"  | git config --global user.name "Swapnila Mundra" | To see list  git config --list</li>
+10) Put the folder created on to GitHub                                          <li>  git remote add origin https://github.com/swapnilamundra/gitVideo.git </li>
+11) Push to the website                                                          <li>  git push -u origin master</li>
+12) Create branch on GIT                                                         <li>  git checkout -b new-branch (to create new branch) | git branch (to see all branches) </li>
+13) To Switch to a branch or cancel creating a new one                           <li>  git switch -  | git switch -master | git switch -new-branch </li>
+14) Push the branch to GitHub                                                    <li>  git push origin new-branch </li>
+15) Pull changes from GitHub that you don't have on your computer                <li>  git pull origin master </li>
+16) To See all previous changes saved                                            <li>  git log </li>
+17) Travel back to old commit                                                    <li>  git checkout <hashvalue of commit> </li>
+18) To track status of changes                                                   <li>  git status </li>
+19) Clone a repo                                                                 <li> git clone https://github.com/swapnilamundra/gitVideo.git </li>
+    </list>
+
 </body>
 </html>
 
