Added dropdown on Index.html to feature1

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head><title>Feature1</title></head>
     <body><h1>Welcome to Feature1</h1>
-        <p>This is a paragrap from feature1</p>
+        <p>This is a paragraph from feature1</p>
+        <p>Instead of button I want a dropdown (dropdown) Click Down</p>
     </body>
 </html>
